--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@heroicons/vue": "^2.1.1",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "moment": "^2.30.1",
         "vue-sweetalert2": "^5.0.5"
     }
 }
